--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintstick (1.6.4) gigi; urgency=medium
+
+  * packaging: Update dependency
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 07 Oct 2025 11:47:46 +0100
+
 mintstick (1.6.3) xia; urgency=medium
 
   * verify: Add a fallback keyserver
