--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mintstick (1.6.5) zena; urgency=medium
+
+  * Switch to XApp symbolic icons
+  * Switch to XSI
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 20 Nov 2025 14:59:22 +0000
+
 mintstick (1.6.4) gigi; urgency=medium
 
   * packaging: Update dependency
